--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "mprs"
 version = "0.1.4"
 edition = "2018"
+authors = ["abdellatif-dev"]
+description = "mpd client <rust rewrite of mpc>"
+readme = "README.md"
+repository = "https://github.com/abdellatif-dev/mprs"
+license = "GPL"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
