--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,14 @@
 name = "mprs"
 version = "0.1.4"
 edition = "2018"
-authors = ["abdellatif-dev"]
+authors = ["abdellatif-dev <abdellatif.devlog@gmail.com>"]
 description = "mpd client <rust rewrite of mpc>"
 readme = "README.md"
 repository = "https://github.com/abdellatif-dev/mprs"
 license = "GPL"
+keywords = ["mpd", "mpc", "music", "cli", "music player daemon"]
+categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
+exclude = [".github/*", "SECURITY.md", "CONTRIBUTING.md"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
