--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["abdellatif-dev <abdellatif.devlog@gmail.com>"]
 description = "mpd client <rust rewrite of mpc>"
 readme = "README.md"
 repository = "https://github.com/abdellatif-dev/mprs"
-license = "GPL"
+license = "GPL-3.0"
 keywords = ["mpd", "mpc", "music", "cli", "music_player_daemon"]
 categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
 exclude = [".github/*", "SECURITY.md", "CONTRIBUTING.md", "install.sh"]
