--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ exclude = [".github/*", "SECURITY.md", "CONTRIBUTING.md", "install.sh"]
 [dependencies]
 mpd = "0.0.12"
 colored = "2.0.0"
+serde = "1.0.130"
+configr = "0.8.0"
