docs: init feat: get_flag refactor: args

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,11 @@ exclude = [".github/*", "SECURITY.md", "CONTRIBUTING.md", "install.sh"]
 name = "mprs_lib"
 path = "src/lib.rs"
 
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+opt-level = 3
+
 [dependencies]
 mpd = "0.0.12"
