--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,4 +38,4 @@ jobs:
       - name: Run cargo check
         uses: actions-rs/cargo@v1
         with:
-          command: test --all
+          command: test
