--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ license = "GPL-3.0"
 keywords = ["mpd", "mpc", "music", "cli", "music_player_daemon"]
 categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
 exclude = [".github/*", "SECURITY.md", "CONTRIBUTING.md"]
-resolver = "2"
 
 [lib]
 name = "mprs_lib"
@@ -41,5 +40,6 @@ codegen-units = 16
 rpath = false
 
 [dependencies]
+colored = "2.0.0"
 mpd = "0.0.12"
 prettytable-rs = "0.8.0"
