--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,41 +1,44 @@
-name: build
+---
+name: test build
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    push:
+        branches:
+            - master
+    pull_request:
+        branches:
+            - master
 
 jobs:
-  check:
-    name: cargo check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install latest nightly
-        uses: actions-rs/toolchain@v1
-        with:
-            toolchain: nightly
-            override: true
-            components: rustfmt, clippy
+    check:
+        name: cargo check
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - name: Install latest nightly
+              uses: actions-rs/toolchain@v2
+              with:
+                  toolchain: nightly
+                  override: true
+                  components: rustfmt, clippy
 
-      - name: Run cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-  test:
-    name: cargo test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install latest nightly
-        uses: actions-rs/toolchain@v1
-        with:
-            toolchain: nightly
-            override: true
-            components: rustfmt, clippy
+            - name: Run cargo check
+              uses: actions-rs/cargo@v2
+              with:
+                  command: check
+    test:
+        name: cargo test
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - name: Install latest nightly
+              uses: actions-rs/toolchain@v2
+              with:
+                  toolchain: nightly
+                  override: true
+                  components: rustfmt, clippy
 
-      - name: Run cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
+            - name: Run cargo check
+              uses: actions-rs/cargo@v2
+              with:
+                  command: test
