--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,14 +16,14 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - name: Install latest nightly
-              uses: actions-rs/toolchain@v2
+              uses: actions-rs/toolchain@v1
               with:
-                  toolchain: nightly
+                  toolchain: stable
                   override: true
                   components: rustfmt, clippy
 
             - name: Run cargo check
-              uses: actions-rs/cargo@v2
+              uses: actions-rs/cargo@v1
               with:
                   command: check
     test:
@@ -32,13 +32,13 @@ jobs:
         steps:
             - uses: actions/checkout@v4
             - name: Install latest nightly
-              uses: actions-rs/toolchain@v2
+              uses: actions-rs/toolchain@v1
               with:
-                  toolchain: nightly
+                  toolchain: stable
                   override: true
                   components: rustfmt, clippy
 
             - name: Run cargo check
-              uses: actions-rs/cargo@v2
+              uses: actions-rs/cargo@v1
               with:
                   command: test
